--- a/task2/package.json
+++ b/task2/package.json
@@ -5,13 +5,16 @@
   "main": "index.js",
   "scripts": {
     "build": "babel lib -d dist",
-    "start": "npm run build && nodemon dist/index.js"
+    "check": "eslint --fix lib/**",
+    "start": "nodemon dist/index.js",
+    "all": "npm run check && npm run build && npm run start"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@hapi/joi": "^17.1.0",
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^10.1.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^6.8.0",
     "express": "^4.17.1",
