--- a/task2/package.json
+++ b/task2/package.json
@@ -19,6 +19,7 @@
     "eslint": "^6.8.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.2",
-    "underscore": "^1.9.2"
+    "underscore": "^1.9.2",
+    "winston": "^3.2.1"
   }
 }
