--- a/task2/package.json
+++ b/task2/package.json
@@ -18,6 +18,7 @@
     "babel-preset-env": "^1.7.0",
     "eslint": "^6.8.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.2",
     "underscore": "^1.9.2",
     "winston": "^3.2.1"
